# Allostery-Investigation

./: .gitignore  AllIn_geometry.py  AllIn_plot.py  README.md  requirements.txt
requierements/: pyproject.toml  requirements.txt
results/AB_results/: summary_combined.json
results/AB_results/02_system_B/: hbond_contacts_combined.csv
results/mut_results/: summary_mut_vs_A_combined.json
results/mut_results/F670G/: summary_mutant.json
results/mut_results/I669G/: summary_mutant.json
results/mut_results/R668G/: summary_mutant.json
results/mut_results/mutants_info/: README.md  mutant_metadata.json
results_2/RMSF_v2/: plot_rmsf_v2.py  summary.json
results_2/phospho_tail_coupling/: run_phospho_tail_coupling.py  summary.json
results_2/phospho_tail_coupling/A/: summary.json
results_2/phospho_tail_coupling/A vs F670G/: delta_mean_sasa_A_minus_mutant.csv
results_2/phospho_tail_coupling/A vs I669G/: delta_mean_sasa_A_minus_mutant.csv
results_2/phospho_tail_coupling/A vs R668G/: delta_mean_sasa_A_minus_mutant.csv
results_2/phospho_tail_coupling/B/: summary.json
results_2/phospho_tail_coupling/F670G/: summary.json
results_2/phospho_tail_coupling/I669G/: summary.json
scripts/: AllIn_DCCM.py  AllIn_build_phospho_explanation.py  AllIn_community.py  AllIn_geometry.py  AllIn_hbond.py  AllIn_phospho_coupling.py  AllIn_plot.py  AllIn_psf_cleaner.py  AllIn_run_AB_combined.py  AllIn_run_DCCM_local_check.py  AllIn_run_MUT_vs_A_combined.py  AllIn_run_RMSF_v2.py  AllIn_run_geometry_plots.py  AllIn_run_phospho_tail_coupling.py
(+58 files in other folders)
