[project]
name = "allostery-investigation"
version = "0.1.0"
description = "MD analysis tools for geometry and plotting"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.10.8",
  "mdanalysis>=2.10.0",
  "numpy>=2.4.3",
]

[project.optional-dependencies]
psf = [
  "parmed>=4.3.1",
]

[tool.uv]
package = false
